@@ -2,10 +2,12 @@ package ua.biblioteka.biblioteka_backend.mapper;
 
 import org.springframework.stereotype.Component;
 import ua.biblioteka.biblioteka_backend.dto.BookDTO;
+import ua.biblioteka.biblioteka_backend.dto.ImageDTO;
 import ua.biblioteka.biblioteka_backend.entity.Book;
 import ua.biblioteka.biblioteka_backend.entity.Image;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
@@ -25,26 +27,54 @@ public class BookMapper {
         dto.setPublisher(book.getPublisher());
         dto.setYear(book.getYear());
         dto.setDescription(book.getDescription());
-        dto.setImageIds(book.getImages() != null
-                ? book.getImages().stream().map(Image::getUrl).collect(Collectors.toList())
-                : Collections.emptyList());
+
+        List<ImageDTO> imageDTOs = book.getImages().stream()
+                .map(image -> {
+                    ImageDTO imgDto = new ImageDTO();
+                    imgDto.setId(image.getId());
+                    imgDto.setUrl(image.getUrl());
+                    imgDto.setPublicId(image.getPublicId());
+                    return imgDto;
+                })
+                .toList();
+        dto.setImages(imageDTOs);
+
         return dto;
     }
 
-    public Book toEntity(BookDTO dto) {
-        Book book = new Book();
-//        book.setId(dto.getId());
-        book.setTitle(dto.getTitle());
-        book.setAuthor(dto.getAuthor());
-        book.setCategory(dto.getCategory());
-        book.setSubcategories(dto.getSubcategories());
-        book.setPrice(dto.getPrice());
-        book.setQuantity(dto.getQuantity());
-        book.setLanguage(dto.getLanguage());
-        book.setAgeRestriction(dto.getAgeRestriction());
-        book.setPublisher(dto.getPublisher());
-        book.setYear(dto.getYear());
-        book.setDescription(dto.getDescription());
-        return book;
+    public Book toEntity(BookDTO dto, List<Image> images) {
+        return Book.builder()
+//                .id(dto.getId())
+                .title(dto.getTitle())
+                .author(dto.getAuthor())
+                .publisher(dto.getPublisher())
+                .year(dto.getYear())
+                .description(dto.getDescription())
+                .category(dto.getCategory())
+                .subcategories(dto.getSubcategories())
+                .ageRestriction(dto.getAgeRestriction())
+                .price(dto.getPrice())
+                .quantity(dto.getQuantity())
+                .language(dto.getLanguage())
+                .images(images)
+                .build();
     }
+
+    
+//    public Book toEntity(BookDTO dto) {
+//        Book book = new Book();
+//    book.setId(dto.getId());
+//        book.setTitle(dto.getTitle());
+//        book.setAuthor(dto.getAuthor());
+//        book.setCategory(dto.getCategory());
+//        book.setSubcategories(dto.getSubcategories());
+//        book.setPrice(dto.getPrice());
+//        book.setQuantity(dto.getQuantity());
+//        book.setLanguage(dto.getLanguage());
+//        book.setAgeRestriction(dto.getAgeRestriction());
+//        book.setPublisher(dto.getPublisher());
+//        book.setYear(dto.getYear());
+//        book.setDescription(dto.getDescription());
+//        return book;
+//    }
 }
